--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_APP_API_BASE_URL="https://api.darkevil.online"
+VITE_APP_API_BASE_URL=
 
 
-# VITE_APP_API_BASE_URL="http://localhost:5001"
+# VITE_APP_API_BASE_URL=
